# Pyro---Python-but-Simpler-

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py  test_features.pyro
.github/workflows/: ci.yml  publish.yml  python-publish.yml
examples/: browser_playground.html  class.pyro  fibonacci.pyro  hello.pyro
pyro/: __init__.py  ast_nodes.py  cli.py  compiler.py  error_utils.py  lexer.py  parser.py  transformer.py
pyro_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pyro_lang.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_integration.py  test_lexer.py  test_parser.py
the_pyro_lang.egg-info/: PKG-INFO  SOURCES.txt
