[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyro-lang"
version = "0.1.3"
description = "A friendlier Python that compiles to Python"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Pyro Contributors"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
pyro = "pyro.cli:main"

[project.urls]
Homepage = "https://github.com/pyro-lang/pyro"
"Bug Reports" = "https://github.com/pyro-lang/pyro/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyro*"]
